Upgraded to totallylazy version 80